syntax = "proto3";

package user;

option go_package = "user";

import "context_bus/context_bus.proto";

service User {
  rpc ResetDB(Request) returns (Result);
  // CheckUser returns whether the username and password are correct
  rpc CheckUser(Request) returns (Result);
}

message Request {
  string username = 1;
  string password = 2;

  context_bus.Payload CBPayload = 10001;
}

message Result {
  bool correct = 1;

  context_bus.Payload CBPayload = 10001;
}